...
        VStack(spacing:0) {
            HStack() {
                Text("Sample:")
                    .font(.headline)
                    .padding(.leading)

                TextField("Sample Text:", text: self.$textSample)
                    .disableAutocorrection(true)
                    .padding(.trailing)

                Spacer()
            }
            .padding(.vertical) // Leave some space for the TextField to grow vertically inside the stroke.
...
    }
}

struct TVMainView_Previews: PreviewProvider {
    static let swiftUI = GridModel(name: "SwiftUI", models: ColorModel.swiftUIColors())
    static let textView =  GridModel(name: "Text", models: TextModel.textModels())
    static let adaptable = GridModel(name: "Adaptable", models: ColorModel.adaptableColors())
    
    static var previews: some View {
        Group {
            TVMainView(gridModels: [textView, swiftUI, adaptable])
            
            TVMainView(gridModels: [swiftUI, textView])
...
