...

                hjsSiteView()
                    .padding()
            }

            Button(action: { self.presentationMode.wrappedValue.dismiss() }) {
                Text("Dismiss")
            }

        }
    }
}

...
